# tdplatform

./: .gitignore  ReadMe.md  default.json  pyproject.toml  requirements.txt
.svn/: wc.db
account/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20200107_1424.py  0003_auto_20200110_1456.py  0004_auto_20200229_1410.py  0005_auto_20200304_1345.py  0006_auto_20200512_1549.py  0007_commonlinks.py
article/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_auto_20200116_1443.py  0002_auto_20200512_1549.py  0003_auto_20200116_1505.py  0003_rename_articlepost_id_slug_article_art_id_e7a7d5_idx.py  0004_auto_20200120_0946.py  0005_auto_20200304_1131.py  0006_auto_20200304_1338.py  0007_auto_20200310_1008.py  0008_auto_20200324_1404.py
asset/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
asset/migrations/: 0001_initial.py  0002_auto_20200107_1424.py  0002_auto_20200409_1447.py  0003_auto_20200110_1456.py  0003_complaint_analysis_time.py  0004_auto_20200512_1549.py  0004_teccontent_status.py  0005_auto_20200618_1505.py  0006_auto_20200630_1031.py  0007_auto_20200714_1648.py  0008_patent.py  0009_project.py  0010_auto_20210201_1420.py  0011_project_changed.py  0012_auto_20210408_0904.py  0013_alter_articles_id.py
blog/: models.py  urls.py
mysite/: settings.py  urls.py
static/css/: header.css  (+5 more)
templates/: base.html  footer.html  header.html  home.html
training/: __init__.py  admin.py  cron.py  forms.py  models.py  urls.py  views.py
(+101 files in other folders)
