[project]
name = "tdplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "awesome-slugify>=1.6.5",
    "django>=6.0.4",
    "django-braces>=1.17.0",
    "django-crontab>=0.7.1",
    "django-simpleui>=2026.1.13",
    "pymysql>=1.1.2",
]
